Update to Javascript code

--- a/html/visuals.html
+++ b/html/visuals.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="styles.css">
+    <script src="visuals.js"></script>
     <title>Multimodal Project</title>
 </head>
 <body>
     <nav>
         <ul>
             <li><h1>Multimodal Project Title</h1></li>
-            <li><a href="display.html">Navigation</a></li>
-            <li><a href="about.html">Menu</a></li>
+            <li><a href="visuals.html">Visualization</a></li>
             <li><a href="index.html">Home</a></li>
         </ul>
     </nav>
+    <canvas id="myCanvas">
+    </canvas>
 </body>
 </html>
