--- a/html/index.html
+++ b/html/index.html
@@ -9,8 +9,7 @@
     <nav>
         <ul>
             <li><h1>Multimodal Project Title</h1></li>
-            <li><a href="display.html">Navigation</a></li>
-            <li><a href="about.html">Menu</a></li>
+            <li><a href="visuals.html">Visualization</a></li>
             <li><a href="index.html">Home</a></li>
         </ul>
     </nav>
