--- a/html/index.html
+++ b/html/index.html
@@ -22,9 +22,30 @@
         </div>
     </div>
     <div id="background">
-        
-        <p> TODO: Write Intro Paragraph </p>
-        <div id=""></div>
+        <h1>Sorting Algorithms</h1>
+        <img src="SortingAlgorithms.png" id="algorithms"/>
+        <p>To show off a couple sorting algorithms that I've chosen, I made 
+        visualizations for those algorithms. What these visualizations show 
+        us is how each sorting algorithm interacts with the list provided. 
+        Pick an algorithm from the navigation bar at the top to see how it 
+        works. You can play around with the algorithms and change some 
+        settings, however changing the settings can make it unbearably slow.
+        All of my code can be found in <a href="https://github.com/LuisDaLizard/MultimodalProject">github</a>.
+        Here are some instructions on how to use the visualization:</p>
+        <ol>
+            <li>Each visualization is ready to go as soon as you load the page. 
+            All you need to do is click Start!</li>
+            <li>Sorting an already sorted list isn't very interesting so if you 
+            want to use a random list you can click Shuffle.</li>
+            <li>The first Input Field tells the algorithm how many elements we 
+            want to sort. By default it's set to 100 but you can change to any 
+            positive number you'd like!</li>
+            <li>The second Input Field tells us how long of a delay to put on 
+            each comparison the algorithm makes. By default it is set to 1 but 
+            you can set it to any positive value you'd like</li>
+            <li>If the algorithm is taking a bit longer than you'd like to wait,
+            you can refresh the page and everything will reset.</li>
+        </ol>
     </div>
 </body>
 </html>
